css/arm5e.css
/* ... */
.arm5e .calendar input[type="number"],
.arm5e .calendar input[type="text"],
.arm5e .astrolab input[type="text"],
.arm5e .astrolab input[type="number"] {
  font-family: "bookAntiqua";
  font-weight: bold;
  background: rgba(0, 0, 0, 0.15);
  height: 25px;
  background-image: none;
}

.arm5e .scriptorium input[type="text"],
.arm5e .scriptorium input[type="number"] {
  font-family: "bookAntiqua";
  font-weight: normal;
  height: 13pt;
  background-image: none;
  max-width: 220px;
}
.arm5eRoll select,
.arm5e select {
  height: 20px;
  background: rgba(0, 0, 0, 0.05);
  border: 1px solid #7a7971;
  border-radius: 3px;
  font-family: inherit;
  padding: 0 3px;
  text-overflow: ellipsis;
  font-size: 11pt;
}
.arm5e .scriptorium select {
  font-family: "bookAntiqua";
  max-width: 220px;
}
.arm5e .astrolab select {
  font-weight: bold;
  background: rgba(0, 0, 0, 0.15);
  height: 25px;
  font-family: "bookAntiqua";
}

.arm5e .mainPlayer {
  background-image: url("../assets/PC/background.png");
  background-repeat: repeat-y;
  background-size: contain;
  font-family: "bookAntiquaBold";
  padding-left: 32px;
  padding-right: 32px;
  font-size: 9pt;
}

.arm5e .mainNPC {
  background-image: url("../assets/NPC/background.png");
  background-repeat: repeat-y;
  background-size: contain;
  font-family: "bookAntiquaBold";
  padding-left: 32px;
  padding-right: 32px;
  font-size: 9pt;
}

.arm5e .mainLaboratory {
  background-image: url("../assets/Lab/background.png");
  background-repeat: repeat-y;
  background-size: contain;
  font-family: "bookAntiquaBold";
  padding-left: 32px;
  padding-right: 32px;
  font-size: 9pt;
}

.arm5e .mainCodex {
  background-image: url("../assets/Codex/background.png");
  background-repeat: repeat-y;
  background-size: contain;
  font-family: "bookAntiquaBold";
  padding-left: 32px;
  padding-right: 32px;
  font-size: 9pt;
}

.arm5e .mainCovenant {
  background-image: url("../assets/Covenant/background.png");
  background-repeat: repeat-y;
  background-size: contain;
  font-family: "bookAntiquaBold";
  padding-left: 32px;
  padding-right: 32px;
  font-size: 9pt;
}

.arm5e .mainItem {
  background-repeat: repeat-y;
  background-size: 100%;
  font-family: "bookAntiquaBold";
  padding-left: 34px;
  padding-right: 34px;
  font-size: 9pt;
  max-width: 800px;
}
/* 
.arm5e .mainItem .sheet-body {
  height: auto;
} */

.arm5e .mainItem .header-background {
  margin-left: -34px;
  text-align: center;
  margin-top: 0px;
}
.arm5e .header-background {
  margin-left: -32px;
  width: calc(100% + 64px);
}
.arm5e .mainItem .footer-background {
  text-align: center;
  margin-left: -34px;
  margin-top: 0px;
}
.arm5e .footer-background {
  margin-left: -32px;
  margin-top: auto;
  width: calc(100% + 64px);
}

.arm5e .header-background img {
  width: 100%;
  border: 0px;
}

.arm5e .footer-background img {
  width: 100%;
  border: 0px;
  height: inherit;
}
.arm5e .header.scriptorium-header {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 120px;
  flex: 0 0 120px;
  /*overflow: hidden;*/
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 10px;
}
.arm5e .sheet-header {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 240px;
  flex: 0 0 240px;
  /*overflow: hidden;*/
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  /* margin-bottom: 5px; */
}

/* .arm5e .mainItem .sheet-header {
  margin-top: 100px;
} */

.arm5e .sheet-header-lab {
  -ms-flex: 0 0 315px;
  flex: 0 0 315px;
}

.arm5e .sheet-header-codex {
  -ms-flex: 0 0 80px;
  flex: 0 0 80px;
  font-family: "blackmoor";
  font-size: 18px;
}

.arm5e .codex-title {
  text-align: center;
  font-family: "blackmoor";
  font-size: 35px;
  height: 45px;
  color: #581845;
}

.arm5e .sheet-header .profile-img {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 230px;
  flex: 0 0 230px;
  height: 236px;
  margin-right: 10px;
  margin-bottom: 10px;
}

.arm5e .profile-img {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 100px;
  flex: 0 0 100px;
  height: 100px;
  width: 100px;
  margin-right: 5px;
  margin-bottom: 5px;
}

.arm5e .sheet-header .item-img {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 200px;
  flex: 0 0 200px;
  height: 200px;
  margin-right: 16px;
  margin-bottom: 16px;
}

.arm5e .sheet-header .header-fields {
  -webkit-box-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.arm5e .sheet-header h1.charname {
  height: 50px;
  padding: 0px;
  margin: 5px 0;
  border-bottom: 0;
}

.arm5e .sheet-header h1.spellname {
  height: 60px;
  padding: 0px;
  margin: 5px 0;
  border-bottom: 0;
}

.arm5e .sheet-header h1.charname input {
  width: 100%;
  margin: 0;
  /*padding-top: 30px;
  line-height: 30;*/
  /*font-family: "vinque";*/
  font-family: "blackmoor";
  /*letter-spacing: 1px;*/
}

.arm5e .sheet-header h2.covenantname {
  padding: 0px;
  margin: 5px 0;
  border-bottom: 0;
}

.arm5e .sheet-header h2.covenantname input {
  width: 100%;
  margin: 0;
  /*padding-top: 25px;
  line-height: 50;*/
  /*font-family: "vinque";*/
  font-family: "blackmoor";
  /*letter-spacing: 1px;*/
}

.arm5e .sheet-header h2.codexname {
  padding: 0px;
  margin: 5px 0;
  border-bottom: 0;
}

.arm5e .sheet-header h2.codexname input {
  width: 100%;
  margin: 0;
  /*padding-top: 25px;
  line-height: 50;*/
  /*font-family: "vinque";*/
  font-family: "blackmoor";
  /*letter-spacing: 1px;*/
}

.arm5e .diary-tabs {
  font-family: "bookAntiqua";
  font-size: 10pt;
  text-align: center;
  /* background-image: url("../assets/player/bar.png"); */
  background-repeat: repeat-x;
  background-position-y: bottom;
}
/* ... */

